[package]
name = "CoinFlip"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "coin_flip"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
solana-program = "1.9.5"
